fix: superposition of logos and form when logos wrap

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
 }
 
 #m33-startup-choice {
-  height: 80px;
   line-height: 80px;
   margin: 0 0 30px 50px;
 }
